[package]
name = "stitch"
version = "0.1.0"
edition = "2021"
description = "Incremental context rebuilder — rehydrates compacted summaries from files, git, and evidence"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
